DuPont DevSB/src/objects/pse__Schedule__c.object
<CustomObject>
    <customHelpPage>pse__ScheduleHelp</customHelpPage>
    <description>Represents start and end dates and weekly working hours for an assignment. You enter schedule details when you create an assignment, which also creates an associated schedule record. Although schedule records have the fields Scheduled Hours and Scheduled Days, these are not intended for users to enter time directly. Their values are system-generated based on schedule dates, patterns, and exceptions. Specific deviations from schedules are represented as schedule exceptions.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Action_Force_Schedule_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Scheduled Hours, Assignment Projected Revenue and Est Vs Actuals records related to Schedule/Assignment.</description>
        <inlineHelpText>If checked on save, refreshes Scheduled Hours, Assignment Projected Revenue and Est Vs Actuals records related to Schedule/Assignment.</inlineHelpText>
        <label>Action: Force Schedule Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Friday Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monday Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Saturday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days scheduled</description>
        <inlineHelpText>Number of days scheduled</inlineHelpText>
        <label>Scheduled Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Hours__c</fullName>
        <inlineHelpText>The total number of hours scheduled</inlineHelpText>
        <label>Scheduled Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Thursday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Week_Total_Hours__c</fullName>
        <description>The total of the daily hours</description>
        <formula>pse__Sunday_Hours__c + pse__Monday_Hours__c + pse__Tuesday_Hours__c + pse__Wednesday_Hours__c + pse__Thursday_Hours__c + pse__Friday_Hours__c + pse__Saturday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Sunday_Hours__c</columns>
        <columns>pse__Monday_Hours__c</columns>
        <columns>pse__Tuesday_Hours__c</columns>
        <columns>pse__Wednesday_Hours__c</columns>
        <columns>pse__Thursday_Hours__c</columns>
        <columns>pse__Friday_Hours__c</columns>
        <columns>pse__Saturday_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Schedule{000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__End_Date__c &lt;  pse__Start_Date__c</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Check_Hours</fullName>
        <active>true</active>
        <errorConditionFormula>OR(pse__Sunday_Hours__c &lt; 0, pse__Sunday_Hours__c &gt; 24, pse__Monday_Hours__c &lt; 0, pse__Monday_Hours__c &gt; 24, pse__Tuesday_Hours__c &lt; 0, pse__Tuesday_Hours__c &gt; 24, pse__Wednesday_Hours__c &lt; 0, pse__Wednesday_Hours__c &gt; 24, pse__Thursday_Hours__c &lt; 0, pse__Thursday_Hours__c &gt; 24, pse__Friday_Hours__c &lt; 0, pse__Friday_Hours__c &gt; 24, pse__Saturday_Hours__c &lt; 0, pse__Saturday_Hours__c &gt; 24)</errorConditionFormula>
        <errorMessage>Hours cannot be negative or greater than 24.</errorMessage>
    </validationRules>
</CustomObject>